--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=users
+
+?spring.datasource.url=jdbc:postgresql://localhost:5432/db_users
+
+spring.datasource.username=postgres
+
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
